--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         </head>
         <body>
             <h3>RUN BUDDY</h3>
-            What We do 🏃
+            What We do What you Do Your Trainers Reach Out
         </body>
 </html>
