--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 
 <html lang="en">
-        <head>
-            <meta charset="UTF-8"/>
-            <title>Run Buddy</title>
-        </head>
-        <body>
-            <h3>RUN BUDDY</h3>
-            What We do What you Do Your Trainers Reach Out
-        </body>
+        
+    <head>
+        <meta charset="UTF-8"/>
+        <title>Run Buddy</title>
+    </head>
+
+    <header>
+        <h1>RUN BUDDY</h1>
+    </header>
+
+    <sections>
+    </sections>
+
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <footer>
+        <h2>Made with love by Run Buddy.</h2>
+    </footer>
 </html>
