--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
         <title>Run Buddy</title>
     </head>
 
+  <body>  
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
     </header>
-
+<!--hero/jumbotron-->
     <sections>
     </sections>
 
@@ -23,10 +42,15 @@
     </section>
 
     <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <section>
         <h2>Reach Out</h2>
     </section>
 
     <footer>
-        <h2>Made with love by Run Buddy.</h2>
+        <h2>❤️Made with love by Run Buddy.</h2>
     </footer>
+  </body>  
 </html>
