--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
 
   <body>  
@@ -29,6 +30,7 @@
                 </ul>
             </nav>
     </header>
+
 <!--hero/jumbotron-->
     <sections>
     </sections>
