--- a/index.html
+++ b/index.html
@@ -30,9 +30,36 @@
       </ul>
     </nav>
   </header>
-
-<!--hero/jumbotron-->
+  
   <sections>
+    <div>
+      <h3>Get Started Today</h3>
+      <p>Fill out this form and one of our trainers will schedule a consult.</p>
+      <form>
+        <label for="name">Enter Full Name:</label>
+        <input type="text" placeholder="Your Name" name="name" id="name"/>
+        <label for="email">Enter Email Address:</label>
+        <input type="email" placeholder="Email Address" name="email" id="email"/>
+        <label for="phone">Enter a Phone Number:</label>
+        <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+        <p>
+          Have you ever worked out with a trainer before?
+          <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+          <label for="trainer-yes">Yes</label>
+          <input type="radio" name="trainer-confirm" id="trainer-no"/>
+          <label for="trainer-no">No</label>
+        </p>
+        <p>
+          <label for="checkbox">
+          I acknowledge that I am at least 18 years of age
+          </label>
+          <input type="checkbox" name="age-confirm" id="checkbox"/>
+        </p>
+        <button type="submit">
+          Get running!
+        </button>
+      </form>
+    </div>
   </sections>
 
   <section>
