--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
   </header>
   
-  <sections>
+  <section class="hero">
     <div>
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult.</p>
@@ -60,7 +60,7 @@
         </button>
       </form>
     </div>
-  </sections>
+  </section>
 
   <section>
     <h2>What We Do</h2>
