additional code added to index.html and image assets added

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
   </header>
   
   <section class="hero">
-    <div>
+    <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult.</p>
       <form>
-        <label for="name">Enter Full Name:</label>
-        <input type="text" placeholder="Your Name" name="name" id="name"/>
-        <label for="email">Enter Email Address:</label>
-        <input type="email" placeholder="Email Address" name="email" id="email"/>
-        <label for="phone">Enter a Phone Number:</label>
-        <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+          <label for="name">Enter Full Name:</label>
+          <input class="zazz" type="text" placeholder="Your Name" name="name" id="name"/>
+          <label for="email">Enter Email Address:</label>
+          <input class="zazz" type="email" placeholder="Email Address" name="email" id="email"/>
+          <label for="phone">Enter a Phone Number:</label>
+          <input class="zazz" type="tel" placeholder="Phone Number" name="phone" id="phone"/>
         <p>
           Have you ever worked out with a trainer before?
           <input type="radio" name="trainer-confirm" id="trainer-yes"/>
@@ -62,12 +62,39 @@
     </div>
   </section>
 
-  <section>
+  <section id="what-we-do">
     <h2>What We Do</h2>
+    <p>
+      this is obviously just filler or something
+    </p>
   </section>
 
-  <section>
+  <section id="what-you-do">
     <h2>What You Do</h2>
+  
+    <div>
+      <img src="./assets/images/step-1.svg" alt=""/>
+      <h3>Step 1: Fill Out the Form Above</h3>
+      <p>You're already here, so why not?</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/step-2.svg" alt=""/>
+      <h3>Step 2: Consult with One of Our Trainers.</h3>
+      <p>Are you here to build muscle, lose weight, or just feel good?</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/step-3.svg" alt=""/>
+      <h3>Step 3: Get Running.</h3>
+      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/step-4.svg" alt=""/>
+      <h3>Step 4: See Results.</h3>
+      <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+    </div>
   </section>
 
   <section>
