--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
     </div>
   </section>
 
-  <section id="what-we-do">
+  <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
-    <p>
-      this is obviously just filler or something
-    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit repudiandae, impedit beatae sapiente rerum ad a, ut deserunt asperiores laboriosam ratione quaerat nemo sunt itaque aspernatur sit ea non.</p>
   </section>
 
   <section id="what-you-do">
