--- a/index.html
+++ b/index.html
@@ -95,8 +95,18 @@
     </div>
   </section>
 
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+      <div class="trainer-bio">
+        <h3>Arron Stephens</h3>
+        <h4>Speed/Strength</h4>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, at exercitationem. Magni aperiam dolores quidem ullam enim nulla consectetur eveniet rerum in quae. Reiciendis ut vitae et ullam nulla minima?
+        </p>
+      </div>
+    </article>    
   </section>
 
   <section>
