--- a/index.html
+++ b/index.html
@@ -99,18 +99,61 @@
     <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
-      <div class="trainer-bio">
+      <div class="trainer-bio text-left">
         <h3>Arron Stephens</h3>
         <h4>Speed/Strength</h4>
         <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, at exercitationem. Magni aperiam dolores quidem ullam enim nulla consectetur eveniet rerum in quae. Reiciendis ut vitae et ullam nulla minima?
         </p>
       </div>
-    </article>    
+    </article>
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3> Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, omnis. Facilis recusandae qui assumenda maxime similique doloribus, est, alias eos voluptatum praesentium odio natus, consequuntur in adipisci magnam veritatis quo.
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+    </article>
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+      <div class="trainer-bio text-left">
+        <h3>Harry "The Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, quas sequi dolores totam eos non eligendi nobis vitae at facere, voluptatibus voluptates delectus, ad eum. Ut a in ab dolorum.
+        </p>
+      </div>
+    </article>
   </section>
 
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3156.435744483762!2d-122.41168568440473!3d37.70944862368774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7eda693c7d55%3A0x7551ba30e0e11448!2s701%20Sunnydale%20Ave%2C%20San%20Francisco%2C%20CA%2094134!5e0!3m2!1sen!2sus!4v1631846489845!5m2!1sen!2sus" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+      </iframe>"
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before siging up?
+          <br/>
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street<br/>
+          Some Town, CA<br/>
+          12345<br/>
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
   </section>
 
   <footer>
