--- a/index.html
+++ b/index.html
@@ -136,13 +136,15 @@
 
   <section id="reach-out" class="contact">
     <h2  class="section-title secondary-border">Reach Out</h2>
+    
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3156.435744483762!2d-122.41168568440473!3d37.70944862368774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7eda693c7d55%3A0x7551ba30e0e11448!2s701%20Sunnydale%20Ave%2C%20San%20Francisco%2C%20CA%2094134!5e0!3m2!1sen!2sus!4v1631846489845!5m2!1sen!2sus" 
       style="border:0;" 
       allowfullscreen="" 
       loading="lazy">
       </iframe>
-      <div class="contact-info">
+
+      <div class="contact-form">
         <h3>Contact Us</h3>
         <form>
           <label for="contact-name">Your Name</label>
@@ -161,6 +163,7 @@
           <br/>
           Let us know and we'll be happy to talk to you!
         </p>
+
         <address>
           55 Main Street<br/>
           Some Town, CA<br/>
