--- a/index.html
+++ b/index.html
@@ -69,13 +69,20 @@
   </section>
 
   <section id="what-we-do" class="intro">
+    <div class="flex-row">
     <h2 class="section-title primary-border">What We Do</h2>
+    </div>
+
+    <div class="flex-row">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit repudiandae, impedit beatae sapiente rerum ad a, ut deserunt asperiores laboriosam ratione quaerat nemo sunt itaque aspernatur sit ea non.</p>
+    </div>  
   </section>
 
   <section id="what-you-do" class="steps">
+    <div class="flex-row">
     <h2 class="section-title secondary-border">What You Do</h2>
-  
+    </div>
+
     <div>
       <img src="./assets/images/step-1.svg" alt=""/>
       <h3>Step 1:<span>Fill Out the Form Above</span></h3>
@@ -102,7 +109,10 @@
   </section>
 
   <section id="your-trainers" class="trainers">
+    <div class="flex-row">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
+    </div>
+
     <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
       <div class="trainer-bio text-left">
@@ -135,8 +145,10 @@
   </section>
 
   <section id="reach-out" class="contact">
+    <div class="flex-row">
     <h2  class="section-title secondary-border">Reach Out</h2>
-    
+    </div>
+
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3156.435744483762!2d-122.41168568440473!3d37.70944862368774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7eda693c7d55%3A0x7551ba30e0e11448!2s701%20Sunnydale%20Ave%2C%20San%20Francisco%2C%20CA%2094134!5e0!3m2!1sen!2sus!4v1631846489845!5m2!1sen!2sus" 
       style="border:0;" 
