add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -134,41 +134,47 @@
         </div>
       </div>
     </div>
-
-  <section id="your-trainers" class="trainers">
+<!--beginning of trainers-->
+  <section id="your-trainers">
     <div class="flex-row">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
     </div>
 
+  <div class="trainers">
     <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
-      <div class="trainer-bio text-left">
-        <h3>Arron Stephens</h3>
+      <div class="trainer-bio">
+        <h3 class="trainer-name">Arron Stephens</h3>
         <h4>Speed/Strength</h4>
         <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, at exercitationem. Magni aperiam dolores quidem ullam enim nulla consectetur eveniet rerum in quae. Reiciendis ut vitae et ullam nulla minima?
         </p>
       </div>
     </article>
+
     <article class="trainer">
-      <div class="trainer-bio text-right">
-        <h3> Joanna Gill</h3>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+      <div class="trainer-bio">
+        <h3 class="trainer-name"> Joanna Gill</h3>
         <h4>Endurance</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, omnis. Facilis recusandae qui assumenda maxime similique doloribus, est, alias eos voluptatum praesentium odio natus, consequuntur in adipisci magnam veritatis quo.
         </p>
       </div>
-      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
     </article>
+
     <article class="trainer">
       <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
-      <div class="trainer-bio text-left">
-        <h3>Harry "The Headband" Smith</h3>
+      <div class="trainer-bio">
+        <h3 class="trainer-name">Harry "The Headband" Smith</h3>
         <h4>Strength</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, quas sequi dolores totam eos non eligendi nobis vitae at facere, voluptatibus voluptates delectus, ad eum. Ut a in ab dolorum.
         </p>
       </div>
     </article>
+
+  </div>
+    <!--end of trainers-->
   </section>
 
   <section id="reach-out" class="contact">
