--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8"/>
   <title>Run Buddy</title>
   <link rel="stylesheet" href="./assets/css/style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>  
@@ -69,17 +70,14 @@
   </section>
 
   <section id="what-we-do" class="intro">
-<<<<<<< HEAD
    <div>
     <h2 class="section-title primary-border">What We Do</h2>
    </div> 
-=======
     <div class="flex-row">
     <h2 class="section-title primary-border">What We Do</h2>
     </div>
 
     <div class="flex-row">
->>>>>>> feature/flexbox
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit repudiandae, impedit beatae sapiente rerum ad a, ut deserunt asperiores laboriosam ratione quaerat nemo sunt itaque aspernatur sit ea non.</p>
     </div>  
   </section>
@@ -128,12 +126,6 @@
       </div>
     </div>
 
-<<<<<<< HEAD
-  <section id="your-trainers" class="trainers">
-   <div>
-    <h2 class="section-title primary-border">Meet The Trainers</h2>
-   </div>
-=======
     <div class="step">
       <h3>Step 4.</h3>
       <div class="step-info">
@@ -153,7 +145,6 @@
     </div>
 
   <div class="trainers">
->>>>>>> feature/flexbox
     <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
       <div class="trainer-bio">
@@ -191,7 +182,6 @@
   </section>
 
   <section id="reach-out" class="contact">
-<<<<<<< HEAD
    <div>
     <h2  class="section-title secondary-border">Reach Out</h2>
    </div> 
@@ -207,12 +197,10 @@
         <form>
           <label for="contact-name">Your Name</label>
           <input type="text" id="contact-name" placeholder="Your Name"/>
-=======
     <div class="flex-row">
     <h2  class="section-title secondary-border">Reach Out</h2>
     </div>
     
->>>>>>> feature/flexbox
 
     <div class="contact-info">
       <div>
