--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <h3>Step 1.</h3>
       <div class="step-info">
         <div class="step-img">
-          <img src="assets/images/step-1.svg" alt=""/>
+          <img src="./assets/images/step-1.svg" alt=""/>
         </div>
-        <div>
+        <div class="step-text">
           <h4>Fill Out The Form Above</h4>
           <p>You're already here. so why not?</p>
         </div>
@@ -102,9 +102,9 @@
       <h3>Step 2.</h3>
       <div class="step-info">
         <div class="step-img">
-          <img src="assets/images/step-2.svg" alt=""/>
+          <img src="./assets/images/step-2.svg" alt=""/>
         </div>
-        <div>
+        <div class="step-text">
           <h4>Consult With One Of Our Trainers.</h4>
           <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
@@ -115,9 +115,9 @@
       <h3>Step 3.</h3>
       <div class="step-info">
         <div class="step-img">
-          <img src="assets/images/step-3.svg" alt=""/>
+          <img src="./assets/images/step-3.svg" alt=""/>
         </div>
-        <div>
+        <div class="step-text">
           <h4>Get Running.</h4>
           <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
         </div>
@@ -128,9 +128,9 @@
       <h3>Step 4.</h3>
       <div class="step-info">
         <div class="step-img">
-          <img src="assets/images/step-4.svg" alt=""/>
+          <img src="./assets/images/step-4.svg" alt=""/>
         </div>
-        <div>
+        <div class="step-text">
           <h4>See Results.</h4>
           <p>Bi-weekly checkins with your trainer will keep you focused</p>
         </div>
