added more psuedo elements

--- a/index.html
+++ b/index.html
@@ -49,19 +49,24 @@
           <input class="zazz" type="email" placeholder="Email Address" name="email" id="email"/>
           <label for="phone">Enter a Phone Number:</label>
           <input class="zazz" type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+        
         <p>
-          Have you ever worked out with a trainer before?
-          <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+          Have you worked out with a trainer before?
+        <span class="radio-wrapper">
+          <input type="radio" name="trainer-confirm" id="trainer-yes" />
           <label for="trainer-yes">Yes</label>
-          <input type="radio" name="trainer-confirm" id="trainer-no"/>
+        </span>
+        <span class="radio-wrapper">
+          <input type="radio" name="trainer-confirm" id="trainer-no" />
           <label for="trainer-no">No</label>
-        </p>
-        <p>
-          <label for="checkbox">
-          I acknowledge that I am at least 18 years of age
-          </label>
-          <input type="checkbox" name="age-confirm" id="checkbox"/>
-        </p>
+        </span>
+      </p>
+      <p>
+        <span class="checkbox-wrapper">
+          <input type="checkbox" name="age-confirm" id="checkbox" />
+          <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+        </span>
+      </p>
         <button type="submit">
           Get running!
         </button>
@@ -181,32 +186,11 @@
   </section>
 
   <section id="reach-out" class="contact">
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
+
    <div>
     <h2  class="section-title secondary-border">Reach Out</h2>
    </div> 
-    <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3156.435744483762!2d-122.41168568440473!3d37.70944862368774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7eda693c7d55%3A0x7551ba30e0e11448!2s701%20Sunnydale%20Ave%2C%20San%20Francisco%2C%20CA%2094134!5e0!3m2!1sen!2sus!4v1631846489845!5m2!1sen!2sus" 
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy">
-      </iframe>
-
-      <div class="contact-form">
-        <h3>Contact Us</h3>
-        <form>
-          <label for="contact-name">Your Name</label>
-          <input type="text" id="contact-name" placeholder="Your Name"/>
->>>>>>> feature/mediaqueries
-=======
->>>>>>> feature/mediaqueries
-    <div class="flex-row">
-    <h2  class="section-title secondary-border">Reach Out</h2>
-    </div>
-    
-
+   
     <div class="contact-info">
       <div>
         <h3>Run Buddy</h3>
